force-app/main/default/objects/Account/fields/Account_Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Account_Business_Type__c</fullName>
    <label>Account Business Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agency</fullName>
            </value>
            <value>
                <fullName>Merchant</fullName>
            </value>
            <value>
                <fullName>Tour Operator</fullName>
            </value>
            <value>
                <fullName>MICE</fullName>
            </value>
            <value>
                <fullName>Transient</fullName>
            </value>
            <value>
                <fullName>MICE/Transient</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>