force-app/main/default/objects/Account/fields/Account_Currency__c.field-meta.xml
<CustomField>
    <fullName>Account_Currency__c</fullName>
    <label>Account Currency</label>
    <length>3</length>
    <type>Text</type>
</CustomField>