force-app/main/default/objects/Account/fields/Account_Grading__c.field-meta.xml
<CustomField>
    <fullName>Account_Grading__c</fullName>
    <label>Account Grading</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>A - Strategic Account</fullName>
            </value>
            <value>
                <fullName>B - Tactical Account</fullName>
            </value>
            <value>
                <fullName>C - Prospect</fullName>
            </value>
            <value>
                <fullName>A</fullName>
                <isActive>false</isActive>
                <label>A</label>
            </value>
            <value>
                <fullName>B</fullName>
                <isActive>false</isActive>
                <label>B</label>
            </value>
            <value>
                <fullName>C</fullName>
                <isActive>false</isActive>
                <label>C</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>