force-app/main/default/objects/Account/fields/Account_Management__c.field-meta.xml
<CustomField>
    <fullName>Account_Management__c</fullName>
    <label>Account Management</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Managed</fullName>
            </value>
            <value>
                <fullName>Unmanaged</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>