force-app/main/default/objects/Account/fields/Account_Status_Icon__c.field-meta.xml
<CustomField>
    <fullName>Account_Status_Icon__c</fullName>
    <formula>IF(ISPICKVAL(Account_Status__c,&quot;Active&quot;),
IMAGE(&quot;/resource/1679597296000/Icon_Active&quot;,&quot;Active&quot;,40,40),
IMAGE(&quot;/resource/1679597287000/Icon_Inactive&quot;,&quot;Inactive&quot;,40,40))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Status</label>
    <type>Text</type>
</CustomField>