force-app/main/default/objects/Account/fields/Channel_Code__c.field-meta.xml
<CustomField>
    <fullName>Channel_Code__c</fullName>
    <label>Channel Code</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Channel_Group__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Channel_Code</valueSetName>
    </valueSet>
</CustomField>