force-app/main/default/objects/Account/fields/Channel_Global_Indicator__c.field-meta.xml
<CustomField>
    <fullName>Channel_Global_Indicator__c</fullName>
    <label>Channel Global Indicator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Channel_Global_Indicator</valueSetName>
    </valueSet>
</CustomField>