force-app/main/default/objects/Account/fields/Commissions_Level__c.field-meta.xml
<CustomField>
    <fullName>Commissions_Level__c</fullName>
    <label>Commissions Level</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>