force-app/main/default/objects/Account/fields/Connectivity_Method__c.field-meta.xml
<CustomField>
    <fullName>Connectivity_Method__c</fullName>
    <label>Connectivity Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DerbySoft</fullName>
            </value>
            <value>
                <fullName>DirectConnect</fullName>
            </value>
            <value>
                <fullName>RateGain</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>