force-app/main/default/objects/Account/fields/Distribution_Cost__c.field-meta.xml
<CustomField>
    <fullName>Distribution_Cost__c</fullName>
    <label>Distribution Cost</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>