force-app/main/default/objects/Account/fields/Objectives_of_BRM__c.field-meta.xml
<CustomField>
    <fullName>Objectives_of_BRM__c</fullName>
    <label>Objectives of BRM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>