force-app/main/default/objects/Account/fields/Outcome_of_BRM__c.field-meta.xml
<CustomField>
    <fullName>Outcome_of_BRM__c</fullName>
    <label>Outcome of BRM</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>