force-app/main/default/objects/Account/fields/Payment_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Payment_Requirements__c</fullName>
    <label>Payment Requirements</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>None</fullName>
            </value>
            <value>
                <fullName>Credit Card</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>