force-app/main/default/objects/Account/fields/Pilot_Hotel_1__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Hotel_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pilot Hotel 1</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Accounts1</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>