force-app/main/default/objects/Account/fields/Pilot_Hotel_2__c.field-meta.xml
<CustomField>
    <fullName>Pilot_Hotel_2__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Pilot Hotel 2</label>
    <referenceTo>Hotel__c</referenceTo>
    <relationshipLabel>Accounts2</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>