force-app/main/default/objects/Account/fields/Rate_Access_Code__c.field-meta.xml
<CustomField>
    <fullName>Rate_Access_Code__c</fullName>
    <label>Booking Code</label>
    <length>6</length>
    <type>Text</type>
</CustomField>