force-app/main/default/objects/Account/fields/Segment_Group__c.field-meta.xml
<CustomField>
    <fullName>Segment_Group__c</fullName>
    <label>Segment Group</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Segment_Global_Indicator__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Segment_Group</valueSetName>
    </valueSet>
</CustomField>