force-app/main/default/objects/Account/fields/System_Connectivity_Status__c.field-meta.xml
<CustomField>
    <fullName>System_Connectivity_Status__c</fullName>
    <label>System Connectivity Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Pilot</fullName>
            </value>
            <value>
                <fullName>Roll-Out</fullName>
            </value>
            <value>
                <fullName>Quality Check</fullName>
            </value>
            <value>
                <fullName>Integration Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>