force-app/main/default/objects/Account/fields/T_C_DH_Connect_Link__c.field-meta.xml
<CustomField>
    <fullName>T_C_DH_Connect_Link__c</fullName>
    <defaultValue>&apos;https://connect.deutschehospitality.com/display/dhgroupsalesworkspace/&apos;</defaultValue>
    <label>T&amp;C DH Connect Link</label>
    <type>Url</type>
</CustomField>