force-app/main/default/objects/Account/recordTypes/Third_Party_Account.recordType-meta.xml
<RecordType>
    <fullName>Third_Party_Account</fullName>
    <active>true</active>
    <label>Third Party Account</label>
</RecordType>