force-app/main/default/objects/Account/validationRules/Billing_Address_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Billing_Address_Required</fullName>
    <active>true</active>
    <errorConditionFormula>OR(
ISBLANK( BillingCity ),
ISBLANK( BillingCountry ),
ISBLANK( BillingStreet ),
ISBLANK( BillingPostalCode))</errorConditionFormula>
    <errorMessage>Please enter value in the Billing Address field(s)</errorMessage>
</ValidationRule>