force-app/main/default/objects/Account/listViews/Org_Account_Hierarchy.listView-meta.xml
<ListView>
    <fullName>Org_Account_Hierarchy</fullName>
    <columns>PARENT_NAME</columns>
    <columns>Account_Status__c</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>Rate_Access_Code__c</columns>
    <columns>Account_Business_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Org_Account_Hierarchy</label>
</ListView>